version/0.16/_sources/api/solver/_autosummary/settings/near_wall_treatment.rst.txt
:orphan:

.. _near_wall_treatment:

near_wall_treatment
===================

.. autoclass:: ansys.fluent.core.solver.settings_232.near_wall_treatment.near_wall_treatment
    :show-inheritance:

.. rubric:: Attributes

========================================================================   ============================================

Attribute                                                                                                       Summary

========================================================================   ============================================
:ref:`wall_treatment <wall_treatment>`                                                          'wall_treatment' child.

:ref:`user_defined <user_defined>`                                                                'user_defined' child.

:ref:`enhanced_wall_treatment_options <enhanced_wall_treatment_options>`       'enhanced_wall_treatment_options' child.

:ref:`wall_omega_treatment <wall_omega_treatment>`                                      Specify a wall omega treatment.

========================================================================   ============================================

.. rubric:: Included in:

========================   ====================

Parent                                  Summary

========================   ====================
:ref:`viscous <viscous>`       'viscous' child.

========================   ====================

