version/0.27/_sources/api/solver/_autosummary/settings/near_wall_treatment.rst.txt
:orphan:

.. _near_wall_treatment:

near_wall_treatment
===================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.near_wall_treatment
    :show-inheritance:

.. rubric:: Attributes

====================================================================================   =================================================================================

Attribute                                                                                                                                                        Summary

====================================================================================   =================================================================================
:ref:`wall_treatment <wall_treatment>`                                                                                                           'wall_treatment' child.

:ref:`user_defined <user_defined_6>`                                                                                                               'user_defined' child.

:ref:`enhanced_wall_treatment_options <enhanced_wall_treatment_options>`                                                        'enhanced_wall_treatment_options' child.

:ref:`wall_omega_treatment <wall_omega_treatment>`                                                                                       Specify a wall omega treatment.

:ref:`use_second_cell_off_a_wall_quantities <use_second_cell_off_a_wall_quantities>`       Enable/disable using input from second cell off a wall for the wall function.

====================================================================================   =================================================================================

.. rubric:: Included in:

========================   ====================

Parent                                  Summary

========================   ====================
:ref:`viscous <viscous>`       'viscous' child.

========================   ====================

